# xwpe

./: .cirrus.yml  .gitignore  AUTHORS  BUILDING.md  CHANGELOG  FEATURE-mouse-ncurses-gpm.md  HACKING-DAP.md  HACKING-LSP.md  HACKING.md  Makefile  Makefile.am  README  README.md  ROADMAP.md  TODO.md  WAYLAND-TESTING.txt  WeProg.h  WeSyntax.c  WeXterm.c  WeXterm.h  Xwpe.h  attrb.h  configure.ac  edit.h  help.xwpe_eng  io.codeberg.mendezr.xwpe.metainfo.xml  keys.h  model.h  options.h  progr.h  syntax_def  unixkeys.h  unixmakr.h  we_block.c  we_bsp.c  we_bsp.h  we_clip.c  we_clip.h  we_dap.c  we_dap.h  (+39 more)
.github/workflows/: linux.yml  macos.yml
contrib/: setup.sh  xwpe-env
contrib/bsd-test/: README.md  run_tests.sh  sgr_mouse_probe.c  xvfb_smoke.sh
contrib/bsd-test/freebsd/: Vagrantfile  provision.sh
contrib/bsd-test/netbsd/: Vagrantfile  provision.sh
contrib/bsd-test/openbsd/: Vagrantfile  provision.sh
contrib/gentoo-test/: README.md  run.sh
contrib/homebrew/: README.md
contrib/homebrew/core/: xwpe.rb
contrib/homebrew/tap/: LICENSE  README.md
contrib/homebrew/tap/Formula/: xwpe.rb
contrib/opensuse-test/: README.md  Vagrantfile  provision.sh
docs/: LSP.md  Makefile.am  ide-setup.md  terminals.md  version.texi  xwpe.texi
docs/chapters/: bugs-and-limits.texi  compiling.texi  configuration.texi  czech-review-1998.texi  debugging.texi  editor.texi  history.texi  installation.texi  interface.texi  intro.texi  lsp.texi  lug-s-debugger-de.texi  projects.texi  reference.texi  tutorials.texi
docs/demos/: README.md  SCENARIOS.md  captions.sh  record-tours.sh  record.sh  tours.cue
docs/demos/tapes/: codeaction.tape  definition.tape  menu.tape  semantic.tape
docs/demos/tapes/c/: tour.tape
docs/demos/tapes/go/: tour.tape
docs/demos/tapes/python/: tour.tape
docs/demos/tapes/rust/: tour.tape
docs/demos/tapes/scala/: tour.tape
docs/examples/: README.md  compile_error_test.a68  compile_error_test.c  compile_error_test.cpp  compile_error_test.f90  compile_error_test.java  compile_error_test.pas  compile_error_test.py  compile_error_test.tex  debug_constructor.c  debug_test.a68  debug_test.c  debug_test.cpp  debug_test.f90  debug_test.go  debug_test.java  debug_test.pas  debug_test.py  debug_test.rs  debug_test.scala  debug_test_long_output.py  disabled.h  fake.h  headers_test.c  headers_test.h  interactive_test.c
docs/examples/c-lsp/: Makefile  README.md  actions.cpp  c-lsp.prj  main.cpp  shapes.cpp  shapes.hpp
docs/examples/go-lsp/: README.md  actions.go  main.go  shapes.go
docs/examples/python-lsp/: README.md  actions.py  main.py  shapes.py
docs/examples/rust-lsp/: README.md
docs/examples/rust-lsp/src/: actions.rs  main.rs  shapes.rs
docs/examples/scala-lsp/: README.md  actions.scala  main.scala  project.scala  shapes.scala
docs/install/: arch.md  bsd.md  debian.md  fedora.md  macos.md  opensuse.md
docs/sources/: README.md  identicalsoftware-maillist.md
icons/: xwpe.desktop  xwpe_icon_data.h
old/: README.payne-2006  we.help_gr
tests/: README.md  run-tests.sh  test_algol68.py  test_algol68_debug.py  test_backspace.py  test_block.py  test_block_asan.py  test_build_cwd.py  test_checkheader.c  test_chrome_ascii.py  test_clangd_blanklines.py  test_clangd_lsp.py  test_clipboard.c  test_clipboard_osc52.py  test_close_buffer_keys.py  test_compile.py  test_dap.c  test_dap_dlv.c  test_dap_gdb.c  test_dap_lldb.c  test_dap_scala.c  test_debugger_watchdog.py  test_dialog_resize.py  test_empty_desktop.py  test_esc_key.py  test_fdloop.c  test_file_manager_close.py  test_file_manager_layout.py  test_fl_sel_len.c  test_ga68.py  test_ga68_debug.py  test_go_dap.py  test_gopls_lsp.py  test_help_info.py  test_keys_modified.py  test_lsp_buffer.c  test_lsp_clangd.c  test_lsp_doctor.c  test_lsp_gopls.c  test_lsp_menu.py  (+46 more)
tests/docs/: picker-keyboard-investigation.md
tests/inputs/: README  hello.a68  hello.c  hello.p  hello.pl  hello.py  hello.tex  hello_ga68.a68  paint.c  two_errors.c
tests/samples/: Hello.java  big.c  hello.cob  hello.cpp  hello.f90
tests/wayland/: conftest.py  test_block_marking.py  test_clipboard.py  test_editor_options.py  test_menu_edit.py  test_menu_file.py  test_menu_help.py  test_menu_nav.py  test_menu_search.py  test_menu_system.py  test_menu_window.py  test_mouse_scroll.py  test_popup_close_button.py  test_readonly_padlock.py  test_resize.py  test_resize_mouse.py
tests/x11/: conftest.py  matchbox-kbdconfig  test_block_marking.py  test_clipboard.py  test_editor_options.py  test_file_manager_close.py  test_menu_debug.py  test_menu_edit.py  test_menu_file.py  test_menu_help.py  test_menu_nav.py  test_menu_project.py  test_menu_run.py  test_menu_search.py  test_menu_status_bar.py  test_menu_system.py  test_menu_window.py  test_mouse_menu.py  test_mouse_scroll.py  test_popup_close_button.py  test_resize.py  test_syntax_algol68.py  test_user_screen.py  test_window_zoom_redraw.py
